[BUGFIX] raised z-index for flashMessages

--- a/Resources/Public/Stylesheets/Partials/FlashMessages.less
+++ b/Resources/Public/Stylesheets/Partials/FlashMessages.less
@@ -4,6 +4,7 @@
 	height: auto;
 	bottom: 60px;
 	right: 10px;
+	z-index: 101;
 	opacity: 0.80;
 	.flash-message {
 		margin-top: 15px;
